<resources>
    <string name="app_name">Navi</string>
    <string name="label_post">게시글</string>
    <string name="label_map">지도</string>
    <string name="label_recommendation">추천</string>

    <!--  Add Spot  -->
    <string name="title_spot_register">장소 등록하기</string>
    <string name="label_location">위치</string>
    <string name="open_map">지도 열기</string>
    <string name="label_category">분류</string>
    <string name="label_spot_name">장소 이름</string>
    <string name="label_body">내용</string>
    <string name="description_add_spot">장소 추가하기</string>
    <string name="label_select_category">카테고리를 선택해주세요.</string>
    <string name="hint_spot_name">장소 이름을 입력해주세요</string>
    <string name="label_image">사진</string>
    <string name="hint_body">내용을 입력해주세요</string>
    <string name="confirm">확인\n</string>
    <string name="description_upload_image">이미지 추가하기</string>

    <string-array name="category_items">
        <item>맛집</item>
        <item>풍경</item>
        <item>놀이</item>
    </string-array>

    <!--  Login  -->
    <string name="label_id">아이디</string>
    <string name="label_password">비밀번호</string>
    <string name="label_login">로그인</string>
    <string name="label_register">회원가입</string><string name="description_google_continue">구글로 계속하기</string>

    <!--  My Page  -->
    <string name="title_my_page">나의 프로필</string>
    <string name="label_user_name">소금빵</string>
    <string name="label_update_profile">프로필 수정</string>

    <!--  Post  -->
    <string name="description_post_image">포스트 이미지</string>
    <string name="label_post_description">내용</string>

    <!--  Add Post  -->
    <string name="title_post_register">게시글 등록하기</string>
    <string name="label_title">제목</string>
    <string name="description_add_post">게시글 등록하기</string>
    <string name="label_select_spot">위치 선택하기</string>
    <string name="description_center_marker">고정 마커</string>

    <string name="label_selected">선택</string>
    <string name="label_top5">Top5</string>
    <string name="label_recommend_title">이런 곳은 어떠세요</string>

    <!-- PostDetail  -->
    <string name="toast_error_load">불러오기 실패</string>
    <string name="label_nick_name">닉네임</string>

    <!--  Toast -->
    <string name="toast_unselected_message">이미지를 선택하지 않았습니다.</string>
    <string name="toast_save_post_message">게시글이 저장되었습니다.</string>
    <string name="toast_error_post_message">저장 실패</string>
    <string name="toast_error_load_map">지도를 불러오는 데 실패했어요.</string>
    <string name="toast_error_load_address">주소 불러오기를 실패하였습니다</string>

    <!--  Dialog  -->
    <string name="dialog_title_require_login">로그인이 필요합니다.</string>
    <string name="dialog_message_require_login">이 기능을 사용하려면 먼저 로그인을 해야합니다. 로그인 화면으로 이동할까요?</string>
    <string name="dialog_positive_require_login">로그인</string>
    <string name="dialog_negative_require_login">다음에</string>
    <string name="error_login_failed">로그인 실패</string>
    <string name="error_get_token_failed">토큰 가져오기 실패</string>

</resources>