<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/navi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login_id"
        style="@style/AppTextLoginField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/iv_app_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_app_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_id"
            style="@style/AppTextLoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_id"
            android:inputType="text"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_login_password"
        style="@style/AppTextLoginField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ti_login_id"
        app:layout_constraintStart_toStartOf="@+id/ti_login_id"
        app:layout_constraintTop_toBottomOf="@id/ti_login_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ei_login_password"
            style="@style/AppTextLoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_login"
        app:layout_constraintEnd_toEndOf="@id/ti_login_id"
        app:layout_constraintStart_toStartOf="@id/ti_login_id"
        app:layout_constraintTop_toBottomOf="@id/ti_login_password" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/label_register"
        app:layout_constraintEnd_toEndOf="@id/ti_login_id"
        app:layout_constraintStart_toStartOf="@id/ti_login_id"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <ImageButton
        android:id="@+id/ib_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_google_continue"
        android:src="@drawable/ic_google_login"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/tv_register" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/orange_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>