<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_my_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_space"
        app:title="@string/title_my_page" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_my_page_image"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_page"
        app:shapeAppearanceOverlay="@style/AppCircleImageShape"
        tools:background="@color/grey_01" />

    <TextView
        android:id="@+id/tv_my_page_name"
        style="@style/AppTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_my_page_image"
        tools:text="@string/label_user_name" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="42dp"
        android:text="@string/label_update_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_page_name" />


</androidx.constraintlayout.widget.ConstraintLayout>