<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_recommendation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/label_recommendation">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_my_page" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_title_top5"
        style="@style/AppTextTitle.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_top5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_recommendation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top5"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/tv_recommendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_top5" />

    <TextView
        android:id="@+id/tv_recommendation"
        style="@style/AppTextTitle.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_recommend_title"
        app:layout_constraintBottom_toTopOf="@id/rv_recommendation"
        app:layout_constraintEnd_toEndOf="@id/tv_title_top5"
        app:layout_constraintStart_toStartOf="@id/tv_title_top5"
        app:layout_constraintTop_toBottomOf="@id/rv_top5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommendation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_title_top5"
        app:layout_constraintStart_toStartOf="@id/tv_title_top5"
        app:layout_constraintTop_toBottomOf="@id/tv_recommendation" />

</androidx.constraintlayout.widget.ConstraintLayout>